--- a/Craveon/admin/template/mitems.html
+++ b/Craveon/admin/template/mitems.html
@@ -7,7 +7,7 @@
 
 <style>
     body {
-        background-color: #0d1117;
+        background: linear-gradient(#898989, #62db90);
         color: #e0e0e0;
         font-family: 'Orbitron', sans-serif;
     }
@@ -31,7 +31,7 @@
     }
 
     .form-label {
-        color: #00ffff;
+        color: #ebf3f3;
     }
 
     .form-control,
@@ -51,11 +51,11 @@
     }
 
     .btn-primary {
-        background-color: #00ffff;
+        background-color: #9ac1c1;
         border: none;
-        color: #000;
+        color: #000000;
         font-weight: bold;
-        box-shadow: 0 0 10px #00ffff;
+        box-shadow: 0 0 10px #83abab;
     }
 
     .btn-primary:hover {
@@ -92,7 +92,7 @@
 
     .table {
         background-color: #0f172a;
-        color: #00ffff;
+        color: #c4d4d4;
         border-radius: 10px;
         overflow: hidden;
     }
