--- a/Craveon/admin/template/index.html
+++ b/Craveon/admin/template/index.html
@@ -8,7 +8,7 @@
 
 <style>
     body {
-        background-color: #0d1117;
+        background: linear-gradient(#898989, #62db90);
         color: #e0e0e0;
         font-family: 'Orbitron', sans-serif;
     }
@@ -45,7 +45,7 @@
     .card i {
         font-size: 2.5rem;
         margin-bottom: 10px;
-        color: #00ffff;
+        color: #f8fdfd;
         text-shadow: 0 0 8px #00ffff;
     }
 
@@ -67,7 +67,7 @@
     }
 
     .chart-container h3 {
-        color: #00ffff;
+        color:  #fcffff;
         text-align: center;
         margin-bottom: 20px;
         text-shadow: 0 0 5px #00ffff;
