--- a/Craveon/admin/template/users.html
+++ b/Craveon/admin/template/users.html
@@ -7,10 +7,15 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 
 <style>
-    body {
-        background-color: #0d1117;
-        color: #00ffff;
+     html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
         font-family: 'Orbitron', sans-serif;
+        background: linear-gradient(#898989, #62db90);
+        background-attachment: fixed;
+        color: #00ffff;
+        overflow-x: hidden;
     }
 
     h2, h4, h5, h6 {
