--- a/Craveon/customer/template/cbase.html
+++ b/Craveon/customer/template/cbase.html
@@ -13,6 +13,7 @@
     
 </head>
 <body>
+<div class="fullpage-bg"></div>
 
 <!-- Header Section with Navbar and Welcome -->
 <div class="header-section">
