--- a/Craveon/static/css/customer/base.css
+++ b/Craveon/static/css/customer/base.css
@@ -2,7 +2,7 @@
 /* Integrated your CSS with enhancements */
 /* Navbar Styles with Dark Gray Background */
 .navbar-craveon {
-  background-color: #898989 !important;
+  background: linear-gradient(#898989, #62db90) !important;
   padding: 15px 0;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   position: relative;
