--- a/Craveon/admin/template/index.html
+++ b/Craveon/admin/template/index.html
@@ -26,7 +26,7 @@
     }
 
     .card {
-        background: linear-gradient(145deg, #1f2937, #111827);
+        background: linear-gradient(#6a6767);
         color: #00ffff;
         border-radius: 15px;
         padding: 20px 30px;
@@ -60,7 +60,7 @@
     }
 
     .chart-container {
-        background-color: #1a1f2e;
+        background-color: #6a6767;
         padding: 30px;
         border-radius: 15px;
         box-shadow: 0 0 20px rgba(0, 255, 255, 0.2);
