--- a/Craveon/admin/template/reviews.html
+++ b/Craveon/admin/template/reviews.html
@@ -15,20 +15,20 @@
         overflow-x: hidden;
     }
         h1, h2, h3 {
-            color: #00ffff;
+            color: #060606;
             text-shadow: 0 0 10px #00ffff;
         }
 
         table {
-            background-color: #0f172a;
+            background-color: #524e4e;
             color: #00ffff;
             border-collapse: collapse;
             box-shadow: 0 0 10px #00ffff33;
         }
 
         thead {
-            background-color: #111827;
-            color: #00ffff;
+            background-color: #524e4e;
+            color: #e4efef;
         }
 
         th, td {
