--- a/Craveon/admin/template/sales.html
+++ b/Craveon/admin/template/sales.html
@@ -17,13 +17,13 @@
     }
 
     h1, h2 {
-        color: #00ffff;
+        color: #0e0e0e;
         text-shadow: 0 0 6px #00ffffaa;
     }
 
     select, .border, .bg-white {
-        background-color: #0f172a !important;
-        color: #00ffff !important;
+        background-color: #524e4e !important;
+        color: #fff4f4 !important;
         border: 1px solid #00ffff80 !important;
         border-radius: 8px;
         box-shadow: 0 0 5px rgba(0, 255, 255, 0.2);
@@ -36,16 +36,16 @@
     }
 
     table {
-        background-color: #0f172a;
-        color: #00ffff;
+        background-color: #524e4e;
+        color: #faffff;
         border-radius: 10px;
         overflow: hidden;
         box-shadow: 0 0 15px rgba(0, 255, 255, 0.1);
     }
 
     thead {
-        background-color: #111827;
-        color: #00ffff;
+        background-color: #524e4e;
+        color: #ffffff;
     }
 
     tbody tr:nth-child(even) {
@@ -67,15 +67,15 @@
     }
 
     .bg-green-600 {
-        background-color: #86bdb2 !important;
+        background-color: #688f87 !important;
         color: #000;
         font-weight: bold;
-        box-shadow: 0 0 10px #00ffff;
+        box-shadow: 0 0 10px #131414;
         border: none;
     }
 
     .bg-green-600:hover {
-        background-color: #00e6b8 !important;
+        background-color: #7c9792 !important;
     }
 
     .hidden-print {
