--- a/Craveon/admin/template/users.html
+++ b/Craveon/admin/template/users.html
@@ -19,17 +19,18 @@
     }
 
     h2, h4, h5, h6 {
-        color: #00ffff;
+        color: #070707;
+        text-shadow: 0 0 6px #00ffffaa;
     }
 
     .table {
-        background-color: #0f172a;
-        color: #00ffff;
+        background-color: #6a6767;
+        color: #ffffff;
     }
 
     .table thead {
-        background-color: #1a1f2e;
-        color: #00ffff;
+        background-color: #6a6767;
+        color: #edffff;
     }
 
     .table th, .table td {
@@ -57,7 +58,7 @@
     }
 
     .btn-danger {
-        background-color: #f87171;
+        background-color: #ededed;
         border: none;
         color: #fff;
     }
@@ -108,11 +109,11 @@
     }
 
     .table-striped > tbody > tr:nth-of-type(odd) {
-        background-color: #0f172a;
+        background-color: #6a6767;
     }
 
     .table-striped > tbody > tr:nth-of-type(even) {
-        background-color: #111827;
+        background-color: #6a6767;
     }
 
     .table-responsive {
@@ -125,8 +126,8 @@
     }
 
     .table-secondary {
-        background-color: #334155 !important;
-        color: #7fffd4 !important;
+        background-color: #6a6767 !important;
+        color: #fcfffe !important;
     }
 
     .small-list li {
