--- a/Craveon/admin/template/category.html
+++ b/Craveon/admin/template/category.html
@@ -26,7 +26,7 @@
     }
 
     .card {
-        background: linear-gradient(to right, #111827, #1a1f2e);
+        background: linear-gradient(#524e4e);
         border: none;
         box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
         border-radius: 16px;
@@ -77,7 +77,7 @@
     }
 
     .form-control {
-        background-color: #0f172a;
+        background-color: #e1e7e3;
         border: 1px solid #00ffffaa;
         color: #00ffff;
         border-radius: 8px;
@@ -86,13 +86,13 @@
     .form-control:focus {
         border-color: #00ffff;
         box-shadow: 0 0 10px #00ffff;
-        background-color: #0f172a;
+        background-color:#497058;
         color: #00ffff;
     }
 
     .list-group-item {
-        background-color: #111827;
-        color: #00ffff;
+        background-color: #497058;
+        color: #ffffff;
         border: 1px solid #00ffff22;
         border-radius: 8px;
         margin-bottom: 8px;
@@ -100,7 +100,7 @@
 
     .list-group-item.bg-light {
         background-color: #1f2937 !important;
-        color: #7fffd4 !important;
+        color: #e9e9e9 !important;
     }
 
     .badge.bg-secondary {
@@ -109,7 +109,7 @@
 
     .modal-content {
         background-color: #1f2937;
-        color: #00ffff;
+        color: #ffffff;
         border: 1px solid #00ffff30;
         box-shadow: 0 0 10px rgba(0, 255, 255, 0.1);
     }
@@ -126,11 +126,11 @@
     }
 
     h4, h5 {
-        text-shadow: 0 0 8px #00ffff;
+        text-shadow: 0 0 8px #000000;
     }
 
     .text-muted {
-        color: #888 !important;
+        color: #fffdfd !important;
         font-style: italic;
     }
 </style>
