--- a/Craveon/admin/template/mitems.html
+++ b/Craveon/admin/template/mitems.html
@@ -13,12 +13,12 @@
     }
 
     h2, h4, h5 {
-        color: #00ffff;
+        color: #1c1e1e;
         text-shadow: 0 0 5px #00ffff;
     }
 
     .card {
-        background: linear-gradient(to right, #111827, #1a1f2e);
+        background: linear-gradient(#524e4e);
         border: none;
         box-shadow: 0 0 15px rgba(0, 255, 255, 0.15);
         color: #e0e0e0;
@@ -26,7 +26,7 @@
     }
 
     .card-header {
-        background: linear-gradient(to right, #111827, #1a1f2e);
+        background: linear-gradient(#524e4e);
         border-bottom: 1px solid #00ffff50;
     }
 
@@ -36,7 +36,7 @@
 
     .form-control,
     .form-select {
-        background-color: #0f172a;
+        background-color:  #497058;
         color: #00ffff;
         border: 1px solid #00ffff;
         border-radius: 8px;
@@ -91,14 +91,14 @@
     }
 
     .table {
-        background-color: #0f172a;
-        color: #c4d4d4;
+        background-color: #6a6767;
+        color: #ffffff;
         border-radius: 10px;
         overflow: hidden;
     }
 
     .table thead {
-        background-color: #111827;
+        background-color:#6a6767;
         color: #00ffff;
     }
 
